# agentic-text-hackathon

./: .gitignore  makefile  pyproject.toml  requirements.txt
src/ai-engine/: server.py
src/ai-engine/agents/: agent-test.ipynb  agent.py  boss_agent.py  categorize_agent.py  master_agent.py
src/ai-engine/agents/sub_agents/: authorization_agent.py  conversation_agent.py  order_management_agent.py  return_exchange_agent.py
src/ai-engine/agents/sub_agents/csv/: orders.csv  products.csv
src/ai-engine/controllers/: agent.py
src/ai-engine/helpers/: knowledge_upload.py  test.py
src/ai-engine/resources/: auth.json  orders.csv  products.csv
src/ai-engine/routers/: router.py
src/ui/: main.py
src/ui/public/elements/: AuthButton.jsx
